--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -39,10 +39,9 @@
                                     </Grid.OpacityMask>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="{Binding TitleHeightGridLength, FallbackValue=42}" />
-                                        <RowDefinition Height="Auto" />
                                         <RowDefinition Height="*" />
                                     </Grid.RowDefinitions>
-                                    <Grid Grid.Row="0" 
+                                    <Grid Grid.Row="0"
                                           Panel.ZIndex="1">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto" />
@@ -50,53 +49,45 @@
                                             <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
                                         <Button Grid.Column="0"
-                                            Style="{StaticResource SystemIconButton}"
-                                            Command="{Binding MenuCommand}">
+                                                Style="{StaticResource SystemIconButton}"
+                                                Command="{Binding MenuCommand}">
                                             <Image Source="/Resources/Images/logo-small.png" />
                                         </Button>
-                                        <Viewbox Grid.Column="1"
+                                        <Viewbox Grid.Column="0"
+                                                 Grid.ColumnSpan="3"
                                                  Margin="0">
-                                            <TextBlock Text="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Title, FallbackValue='Welcomw, friend!'}"
-                                                       Style="{StaticResource HeaderText}"/>
+                                            <StackPanel>
+                                                <TextBlock FontFamily="{StaticResource LatoBold}"
+                                                           FontSize="{StaticResource FontSizeRegular}"
+                                                           Margin=" 0 0 0 -5">
+                                                    <Run Text="W"
+                                                         Foreground="{StaticResource WordOrangeBrush}" />
+                                                    <Run Text="O"
+                                                         Foreground="{StaticResource WordBlueBrush}" />
+                                                    <Run Text="R"
+                                                         Foreground="{StaticResource WordRedBrush}" />
+                                                    <Run Text="D"
+                                                         Foreground="{StaticResource WordGreenBrush}" />
+                                                </TextBlock>
+                                                <TextBlock Text="wpf_advance"
+                                                           Foreground="{StaticResource ForegroundDarkBrush}"
+                                                           TextAlignment="Center" />
+                                            </StackPanel>
                                         </Viewbox>
                                         <StackPanel Grid.Column="2"
-                                            Orientation="Horizontal">
+                                                    Orientation="Horizontal">
                                             <Button Content="_"
                                                     Command="{Binding MinimizeCommand}"
-                                                    Style="{StaticResource WindowControlButton}"/>
-                                            <Button Content="[]"
+                                                    Style="{StaticResource WindowControlButton}" />
+                                            <Button Content="[ ]"
                                                     Command="{Binding MaximizeCommand}"
-                                                    Style="{StaticResource WindowControlButton}"/>
+                                                    Style="{StaticResource WindowControlButton}" />
                                             <Button Content="X"
                                                     Command="{Binding CloseCommand}"
-                                                    Style="{StaticResource WindowCloseButton}"/>
+                                                    Style="{StaticResource WindowCloseButton}" />
                                         </StackPanel>
                                     </Grid>
                                     <Border Grid.Row="1"
-                                            Height="6"
-                                            BorderThickness="0 0.2 0 0">
-                                        <Border.BorderBrush>
-                                            <LinearGradientBrush StartPoint="0, 0"
-                                                                 EndPoint="1, 0">
-                                                <GradientStop Color="{StaticResource ForegroundLight}"
-                                                              Offset="0.0" />
-                                                <GradientStop Color="{StaticResource ForegroundMain}"
-                                                              Offset="0.5" />
-                                                <GradientStop Color="{StaticResource ForegroundLight}"
-                                                              Offset="1.0" />
-                                            </LinearGradientBrush>
-                                        </Border.BorderBrush>
-                                        <Border.Background>
-                                            <LinearGradientBrush StartPoint="0, 0"
-                                                                 EndPoint="0, 1">
-                                                <GradientStop Color="{StaticResource BackgroundVeryLight}"
-                                                              Offset="0.0" />
-                                                <GradientStop Color="{StaticResource ForegroundLight}"
-                                                              Offset="1.0" />
-                                            </LinearGradientBrush>
-                                        </Border.Background>
-                                    </Border>
-                                    <Border Grid.Row="2"
                                             Padding="{Binding InnerContentPadding}">
                                         <ContentPresenter Content="{TemplateBinding Content}" />
                                     </Border>
@@ -116,7 +107,8 @@
             GlassFrameThickness="0"
             />
     </WindowChrome.WindowChrome>
-    <Grid>
-        <Button>test</Button>
+    <Grid Background="{StaticResource ForegroundLightBrush}">
+        <Frame x:Name="MainFrame"
+               Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}" />
     </Grid>
 </Window>
