--- a/Styles/Fonts.xaml
+++ b/Styles/Fonts.xaml
@@ -1,8 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <FontFamily x:Key="LatoRegular">pask://application;,,,/Resources/Fonts/#Lato Regular</FontFamily>
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
     <FontFamily x:Key="LatoThin">pask://application;,,,/Resources/Fonts/#Lato Thin</FontFamily>
-
+    <FontFamily x:Key="LatoRegular">pask://application;,,,/Resources/Fonts/#Lato Regular</FontFamily>
+    <FontFamily x:Key="LatoBold">pask://application;,,,/Resources/Fonts/#Lato Bold</FontFamily>
     <Style TargetType="{x:Type Control}"
            x:Key="BaseStyle">
         <Setter Property="FontFamily"
@@ -13,7 +14,6 @@
         <Setter Property="FontFamily"
                 Value="{StaticResource LatoThin}" />
     </Style>
-    
     <Style TargetType="{x:Type Button}"
            BasedOn="{StaticResource BaseStyle}" />
     <Style TargetType="{x:Type Label}"
@@ -24,4 +24,7 @@
            BasedOn="{StaticResource BaseTextBlockStyle}" />
     <Style TargetType="{x:Type ListView}"
            BasedOn="{StaticResource BaseStyle}" />
+    <system:Double x:Key="FontSizeSmall">14</system:Double>
+    <system:Double x:Key="FontSizeRegular">20</system:Double>
+    <system:Double x:Key="FontSizeLarge">30</system:Double> 
 </ResourceDictionary>
