--- a/Pages/LoginPage.xaml
+++ b/Pages/LoginPage.xaml
@@ -37,7 +37,7 @@
                                        Foreground="{StaticResource ForegroundDarkBrush}"
                                        Margin="0 0 0 20"/>
                             <TextBox Tag="Email"/>
-                            <TextBox Tag="Password"
+                            <PasswordBox Tag="Password"
                                      Margin="0 0 0 30"/>
                             <Button Content="Next"
                                     HorizontalAlignment="Center"/>
