--- a/Pages/LoginPage.xaml
+++ b/Pages/LoginPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="wpf_advance.LoginPage"
+﻿<local:BasePage x:Class="wpf_advance.LoginPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,14 +8,8 @@
       d:DesignHeight="700"
       d:DesignWidth="700"
       Title="LoginPage">
-    <Border Background="{StaticResource WordBlueBrush}">
+    <Border>
         <Grid>
-            <Grid.Background>
-                <ImageBrush TileMode="Tile"
-                            ViewportUnits="Absolute"
-                            Viewport="0 0 500 500"
-                            ImageSource="/Resources/Images/Backgrounds/emoji-background.png" />
-            </Grid.Background>
             <ScrollViewer VerticalScrollBarVisibility="Auto"
                           HorizontalScrollBarVisibility="Auto">
                 <StackPanel VerticalAlignment="Center"
@@ -50,4 +44,4 @@
             </ScrollViewer>
         </Grid>        
     </Border>
-</Page>
+</local:BasePage>
