--- a/Pages/LoginPage.xaml
+++ b/Pages/LoginPage.xaml
@@ -1,13 +1,15 @@
-﻿<local:BasePage x:Class="wpf_advance.LoginPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:wpf_advance"
-      mc:Ignorable="d"
-      d:DesignHeight="700"
-      d:DesignWidth="700"
-      Title="LoginPage">
+﻿<local:BasePage x:TypeArguments="local:LoginViewModel"
+                x:Class="wpf_advance.LoginPage"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                xmlns:local="clr-namespace:wpf_advance"
+                mc:Ignorable="d"
+                x:Name="Page"
+                d:DesignHeight="700"
+                d:DesignWidth="700"
+                Title="LoginPage">
     <Border>
         <Grid>
             <ScrollViewer VerticalScrollBarVisibility="Auto"
@@ -21,7 +23,7 @@
                             Width="330"
                             Margin="50 50 50 0">
                         <StackPanel>
-                            <TextBlock Text="Sign Up"
+                            <TextBlock Text="Sign In"
                                        FontSize="{StaticResource FontSizeLarge}"
                                        FontFamily="{StaticResource LatoRegular}"
                                        Foreground="{StaticResource WordBlueBrush}" />
@@ -29,19 +31,24 @@
                                        FontSize="{StaticResource FontSizeRegular}"
                                        FontFamily="{StaticResource LatoThin}"
                                        Foreground="{StaticResource ForegroundDarkBrush}"
-                                       Margin="0 0 0 20"/>
-                            <TextBox Tag="Email"/>
-                            <PasswordBox Tag="Password"
-                                     Margin="0 0 0 30"/>
-                            <Button Content="Next"
-                                    HorizontalAlignment="Center"/>
+                                       Margin="0 0 0 20" />
+                            <TextBox Tag="Email"
+                                     Text="{Binding Email}"/>
+                            <PasswordBox x:Name="PasswordText"
+                                         Tag="Password"
+                                         Margin="0 0 0 30" />
+                            <Button Content="Login"
+                                    Command="{Binding LoginCommand}"
+                                    local:IsBusyProperty.Value="{Binding LoginIsRunning}"
+                                    CommandParameter="{Binding ElementName=Page}"
+                                    HorizontalAlignment="Center" />
                         </StackPanel>
                     </Border>
                     <Button Content="I already have an account"
                             Style="{StaticResource TextButton}"
-                            HorizontalAlignment="Center"/>
+                            HorizontalAlignment="Center" />
                 </StackPanel>
             </ScrollViewer>
-        </Grid>        
+        </Grid>
     </Border>
 </local:BasePage>
