--- a/Styles/Fonts.xaml
+++ b/Styles/Fonts.xaml
@@ -5,13 +5,13 @@
     <FontFamily x:Key="LatoRegular">pask://application;,,,/Resources/Fonts/#Lato Regular</FontFamily>
     <FontFamily x:Key="LatoBold">pask://application;,,,/Resources/Fonts/#Lato Bold</FontFamily>
     <FontFamily x:Key="FontAwesome">pask://application;,,,/Resources/Fonts/#Font Awesome 6 Free Solid</FontFamily>
-    <Style TargetType="{x:Type Control}"
-           x:Key="BaseStyle">
+    <Style x:Key="BaseStyle"
+           TargetType="{x:Type Control}">
         <Setter Property="FontFamily"
                 Value="{StaticResource LatoThin}" />
     </Style>
-    <Style TargetType="{x:Type TextBlock}"
-           x:Key="BaseTextBlockStyle">
+    <Style x:Key="BaseTextBlockStyle"
+           TargetType="{x:Type TextBlock}">
         <Setter Property="FontFamily"
                 Value="{StaticResource LatoThin}" />
     </Style>
@@ -27,5 +27,9 @@
            BasedOn="{StaticResource BaseStyle}" />
     <system:Double x:Key="FontSizeSmall">14</system:Double>
     <system:Double x:Key="FontSizeRegular">20</system:Double>
-    <system:Double x:Key="FontSizeLarge">30</system:Double> 
+    <system:Double x:Key="FontSizeLarge">30</system:Double>
+    <system:String x:Key="FontAwesomeChatIcon">&#xf086;</system:String>
+    <system:String x:Key="FontAwesomeUserIcon">&#xf007;</system:String>
+    <system:String x:Key="FontAwesomePictureIcon">&#xf1c5;</system:String>
+    <system:String x:Key="FontAwesomeCogIcon">&#xf013;</system:String>
 </ResourceDictionary>
