--- a/Controls/Chat/ChatListControl.xaml
+++ b/Controls/Chat/ChatListControl.xaml
@@ -4,10 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:wpf_advance"
+             xmlns:core="clr-namespace:wpf_advance.Core;assembly=Core"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
-    <Grid DataContext="{x:Static local:ChatListDisignModel.Instance}"
+    <Grid DataContext="{x:Static core:ChatListDisignModel.Instance}"
           Background="{StaticResource ForegroundLightBrush}">
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <ItemsControl ItemsSource="{Binding Items}">
