--- a/Controls/Chat/ChatListItemControl.xaml
+++ b/Controls/Chat/ChatListItemControl.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:wpf_advance"
+             xmlns:core="clr-namespace:wpf_advance.Core;assembly=Core"
              mc:Ignorable="d"
              Height="60"
              d:DesignHeight="60"
@@ -94,6 +95,6 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    <ContentControl d:DataContext="{x:Static local:ChatListItemDisignModel.Instance}"
+    <ContentControl d:DataContext="{x:Static core:ChatListItemDisignModel.Instance}"
                     Style="{StaticResource ContentStyle}" />
 </UserControl>
