--- a/Pages/RegisterPage.xaml
+++ b/Pages/RegisterPage.xaml
@@ -1,5 +1,5 @@
 ﻿<local:BasePage x:TypeArguments="core:LoginViewModel"
-                x:Class="wpf_advance.LoginPage"
+                x:Class="wpf_advance.RegisterPage"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +10,7 @@
                 x:Name="Page"
                 d:DesignHeight="700"
                 d:DesignWidth="700"
-                Title="LoginPage">
+                Title="RegisterPage">
     <Border>
         <Grid>
             <ScrollViewer VerticalScrollBarVisibility="Auto"
@@ -24,7 +24,7 @@
                             Width="330"
                             Margin="50 50 50 0">
                         <StackPanel>
-                            <TextBlock Text="Sign In"
+                            <TextBlock Text="Sign Up"
                                        FontSize="{StaticResource FontSizeLarge}"
                                        FontFamily="{StaticResource LatoRegular}"
                                        Foreground="{StaticResource WordBlueBrush}" />
@@ -38,15 +38,14 @@
                             <PasswordBox x:Name="PasswordText"
                                          Tag="Password"
                                          Margin="0 0 0 30" />
-                            <Button Content="Login"
+                            <Button Content="Register"
                                     Command="{Binding LoginCommand}"
                                     local:IsBusyProperty.Value="{Binding LoginIsRunning}"
                                     CommandParameter="{Binding ElementName=Page}"
                                     HorizontalAlignment="Center" />
                         </StackPanel>
                     </Border>
-                    <Button Content="Or, create a free account..."
-                            Command="{Binding RegisterCommand}"
+                    <Button Content="Or, I already have an account..."
                             Style="{StaticResource TextButton}"
                             HorizontalAlignment="Center" />
                 </StackPanel>
