--- a/Styles/Texts.xaml
+++ b/Styles/Texts.xaml
@@ -27,6 +27,10 @@
                 Value="0 0 0 1" />
         <Setter Property="FontFamily"
                 Value="{StaticResource LatoRegular}" />
+        <Setter Property="Background"
+                Value="{StaticResource ForegroundLightBrush}" />
+        <Setter Property="Foreground"
+                Value="{StaticResource ForegroundVeryDarkBrush}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBoxBase}">
@@ -104,6 +108,10 @@
                 Value="{StaticResource LatoRegular}" />
         <Setter Property="local:MonitorPasswordProperty.Value"
                 Value="True" />
+        <Setter Property="Background"
+                Value="{StaticResource ForegroundLightBrush}" />
+        <Setter Property="Foreground"
+                Value="{StaticResource ForegroundVeryDarkBrush}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type PasswordBox}">
