--- a/Pages/RegisterPage.xaml
+++ b/Pages/RegisterPage.xaml
@@ -1,4 +1,4 @@
-﻿<local:BasePage x:TypeArguments="core:LoginViewModel"
+﻿<local:BasePage x:TypeArguments="core:RegisterViewModel"
                 x:Class="wpf_advance.RegisterPage"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -39,13 +39,14 @@
                                          Tag="Password"
                                          Margin="0 0 0 30" />
                             <Button Content="Register"
-                                    Command="{Binding LoginCommand}"
-                                    local:IsBusyProperty.Value="{Binding LoginIsRunning}"
+                                    Command="{Binding RegisterCommand}"
+                                    local:IsBusyProperty.Value="{Binding RegisterIsRunning}"
                                     CommandParameter="{Binding ElementName=Page}"
                                     HorizontalAlignment="Center" />
                         </StackPanel>
                     </Border>
                     <Button Content="Or, I already have an account..."
+                            Command="{Binding LoginCommand}"
                             Style="{StaticResource TextButton}"
                             HorizontalAlignment="Center" />
                 </StackPanel>
