--- a/Controls/Chat/ChatListItemControl.xaml
+++ b/Controls/Chat/ChatListItemControl.xaml
@@ -6,8 +6,6 @@
              xmlns:local="clr-namespace:wpf_advance"
              xmlns:core="clr-namespace:wpf_advance.Core;assembly=Core"
              mc:Ignorable="d"
-             Height="60"
-             d:DesignHeight="60"
              d:DesignWidth="800">
     <UserControl.Resources>
         <Style x:Key="ContentStyle"
@@ -29,15 +27,16 @@
                                     Width="4"
                                     Visibility="{Binding NewContentAvailable, Converter={local:BooleanToVisibilityConverter}, ConverterParameter=True}" />
                             <Border Grid.Column="0"
-                                    Padding="8">
+                                    Padding="8 15">
                                 <Border Background="{Binding ProfilePictureRGB, Converter={local:StringRGBToBrushConverter}}"
+                                        Height="40"
                                         Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"
                                         CornerRadius="{Binding ActualHeight, RelativeSource={RelativeSource Self}}">
                                     <TextBlock Text="{Binding Initials}"
                                                VerticalAlignment="Center"
                                                HorizontalAlignment="Center"
                                                Foreground="{StaticResource ForegroundLightBrush}"
-                                               FontSize="{StaticResource FontSizeAverage}"
+                                               FontSize="{StaticResource FontSizeXLarge}"
                                                FontFamily="{StaticResource LatoRegular}" />
                                 </Border>
                             </Border>
@@ -45,10 +44,12 @@
                                     Padding="0 0 8 0">
                                 <StackPanel VerticalAlignment="Center">
                                     <TextBlock Text="{Binding Name}"
+                                               Padding="0 0 0 2"
                                                TextTrimming="CharacterEllipsis"
                                                Foreground="{StaticResource WordBlueBrush}"
                                                FontFamily="{StaticResource LatoRegular}" />
                                     <TextBlock Text="{Binding Message}"
+                                               Padding="0 2 0 0"
                                                TextTrimming="CharacterEllipsis"
                                                Foreground="{StaticResource ForegroundDarkBrush}"
                                                FontFamily="{StaticResource LatoRegular}" />
