--- a/Pages/ChatPage.xaml
+++ b/Pages/ChatPage.xaml
@@ -11,10 +11,6 @@
                 d:DesignWidth="800"
                 Title="ChatPage">
     <Border>
-        <TextBlock Text="ChatPage works!"
-                   Foreground="White"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   FontSize="{StaticResource FontSizeLarge}" />
+        <local:ChatMessageListControl />
     </Border>
 </local:BasePage>
