--- a/Pages/RegisterPage.xaml
+++ b/Pages/RegisterPage.xaml
@@ -25,11 +25,11 @@
                             Margin="50 50 50 0">
                         <StackPanel>
                             <TextBlock Text="Sign Up"
-                                       FontSize="{StaticResource FontSizeLarge}"
+                                       FontSize="{StaticResource FontSizeXXLarge}"
                                        FontFamily="{StaticResource LatoRegular}"
                                        Foreground="{StaticResource WordBlueBrush}" />
                             <TextBlock Text="It's about to get fun"
-                                       FontSize="{StaticResource FontSizeRegular}"
+                                       FontSize="{StaticResource FontSizeXLarge}"
                                        FontFamily="{StaticResource LatoThin}"
                                        Foreground="{StaticResource ForegroundDarkBrush}"
                                        Margin="0 0 0 20" />
