--- a/Styles/Fonts.xaml
+++ b/Styles/Fonts.xaml
@@ -5,15 +5,20 @@
     <FontFamily x:Key="LatoRegular">pask://application;,,,/Resources/Fonts/#Lato Regular</FontFamily>
     <FontFamily x:Key="LatoBold">pask://application;,,,/Resources/Fonts/#Lato Bold</FontFamily>
     <FontFamily x:Key="FontAwesome">pask://application;,,,/Resources/Fonts/#Font Awesome 6 Free Solid</FontFamily>
+    
     <Style x:Key="BaseStyle"
            TargetType="{x:Type Control}">
         <Setter Property="FontFamily"
                 Value="{StaticResource LatoThin}" />
+        <Setter Property="FontSize"
+                Value="{StaticResource FontSizeRegular}" />
     </Style>
     <Style x:Key="BaseTextBlockStyle"
            TargetType="{x:Type TextBlock}">
         <Setter Property="FontFamily"
                 Value="{StaticResource LatoThin}" />
+        <Setter Property="FontSize"
+                Value="{StaticResource FontSizeRegular}" />
     </Style>
     <Style TargetType="{x:Type Button}"
            BasedOn="{StaticResource BaseStyle}" />
@@ -25,10 +30,14 @@
            BasedOn="{StaticResource BaseTextBlockStyle}" />
     <Style TargetType="{x:Type ListView}"
            BasedOn="{StaticResource BaseStyle}" />
-    <system:Double x:Key="FontSizeSmall">14</system:Double>
-    <system:Double x:Key="FontSizeAverage">18</system:Double>
-    <system:Double x:Key="FontSizeRegular">20</system:Double>
-    <system:Double x:Key="FontSizeLarge">30</system:Double>
+    
+    <system:Double x:Key="FontSizeSmaller">10</system:Double>
+    <system:Double x:Key="FontSizeSmall">12</system:Double>
+    <system:Double x:Key="FontSizeRegular">14</system:Double>
+    <system:Double x:Key="FontSizeLarge">20</system:Double>
+    <system:Double x:Key="FontSizeXLarge">24</system:Double>
+    <system:Double x:Key="FontSizeXXLarge">30</system:Double>
+    
     <system:String x:Key="FontAwesomeChatIcon">&#xf086;</system:String>
     <system:String x:Key="FontAwesomeUserIcon">&#xf007;</system:String>
     <system:String x:Key="FontAwesomePictureIcon">&#xf1c5;</system:String>
