--- a/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
+++ b/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
@@ -4,27 +4,50 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:wpf_advance"
+             xmlns:core="clr-namespace:wpf_advance.Core;assembly=Core"
              mc:Ignorable="d"
              d:DesignWidth="800">
-    <Border Padding="5">
+    <Border Padding="5"
+            d:DataContext="{x:Static core:ChatMessageListItemDisignModel.Instance}">
         <Grid>
             <Border VerticalAlignment="Top"
                     HorizontalAlignment="Left"
                     Margin="0 7.5 0 7.5"
+                    Visibility="{Binding SentByMe, Converter={local:BooleanToVisibilityConverter}}"
                     CornerRadius="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"
                     Height="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"
                     Width="35"
                     Background="Green"
                     BorderBrush="{StaticResource ForegroundLightBrush}"
                     BorderThickness="1">
-                <TextBlock Text="LM"
+                <TextBlock Text="{Binding Initials}"
                            VerticalAlignment="Center"
                            HorizontalAlignment="Center"
                            Foreground="{StaticResource ForegroundLightBrush}"
                            FontFamily="{StaticResource LatoRegular}" />
             </Border>
-            <Grid Margin="25 0 0 0"
-                  HorizontalAlignment="Left">
+            <Grid Margin="25 0 25 0"
+                  HorizontalAlignment="{Binding SentByMe, Converter={local:SendByMeToAligmentConverter}}">
+                <Grid.Triggers>
+                    <EventTrigger RoutedEvent="MouseEnter">
+                        <BeginStoryboard>
+                            <Storyboard Storyboard.TargetName="ExtraDetails"
+                                        Storyboard.TargetProperty="Opacity">
+                                <DoubleAnimation To="1"
+                                                 Duration="00:00:00.2" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                    <EventTrigger RoutedEvent="MouseLeave">
+                        <BeginStoryboard>
+                            <Storyboard Storyboard.TargetName="ExtraDetails"
+                                        Storyboard.TargetProperty="Opacity">
+                                <DoubleAnimation To="0"
+                                                 Duration="00:00:00.2" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger>
+                </Grid.Triggers>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
@@ -33,9 +56,9 @@
                 <Border Grid.Row="0"
                         CornerRadius="10"
                         Padding="15"
-                        Background="{StaticResource ForegroundLightBrush}">
+                        Background="{Binding SentByMe, Converter={local:SendByMeToBackgroundConverter}}">
                     <TextBlock VerticalAlignment="Center"
-                               Text="This chat app is awesome! When is it commiing out?"
+                               Text="{Binding Message}"
                                TextWrapping="Wrap"
                                Foreground="{StaticResource WordDarkBlueBrush}"
                                FontFamily="{StaticResource LatoRegular}" />
@@ -44,13 +67,25 @@
                       Panel.ZIndex="1"
                       Margin="15 -1 15 0"
                       StrokeThickness="0"
-                      Fill="{StaticResource ForegroundLightBrush}"
+                      Fill="{Binding SentByMe, Converter={local:SendByMeToBackgroundConverter}}"
+                      HorizontalAlignment="{Binding SentByMe, Converter={local:SendByMeToAligmentConverter}}"
                       Data="M 0,0 L 10,10 L 20,0 L 0,0" />
-                <TextBlock Grid.Row="2"
-                           Text="11:54am"
-                           Foreground="{StaticResource ForegroundLightBrush}"
-                           HorizontalAlignment="Right"
-                           FontSize="{StaticResource FontSizeSmall}"/>
+                <StackPanel Grid.Row="2"
+                            x:Name="ExtraDetails"
+                            Orientation="Horizontal"
+                            Opacity="0">
+                    <TextBlock Text="{Binding MessageSentTime, Converter={local:TimeToDisplayTimeConverter}}"
+                               Foreground="{StaticResource ForegroundLightBrush}"
+                               HorizontalAlignment="Right"
+                               FontSize="{StaticResource FontSizeSmall}"
+                               FontFamily="{StaticResource LatoRegular}"
+                               Margin="0 0 15 0"/>
+                    <TextBlock Text="{Binding MessageReadTime, Converter={local:TimeToReadTimeConverter}}"
+                               Foreground="{StaticResource WordDarkBlueBrush}"
+                               HorizontalAlignment="Right"
+                               FontSize="{StaticResource FontSizeSmall}"
+                               FontFamily="{StaticResource LatoRegular}" />
+                </StackPanel>
             </Grid>
         </Grid>
     </Border>
