--- a/Controls/Chat/ChatListItemControl.xaml
+++ b/Controls/Chat/ChatListItemControl.xaml
@@ -62,12 +62,12 @@
                                          Value="True">
                                 <Setter Property="Background"
                                         TargetName="Background"
-                                        Value="{StaticResource WordVeryLightBlueBrush}" />
+                                        Value="{StaticResource WordVeryVeryLightBlueBrush}" />
                             </DataTrigger>
                             <EventTrigger RoutedEvent="MouseEnter">
                                 <BeginStoryboard>
                                     <Storyboard>
-                                        <ColorAnimation To="{StaticResource WordVeryLightBlue}"
+                                        <ColorAnimation To="{StaticResource WordVeryVeryLightBlue}"
                                                         Duration="0:0:0.15"
                                                         Storyboard.TargetName="Container"
                                                         Storyboard.TargetProperty="Background.Color" />
