--- a/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
+++ b/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
@@ -73,16 +73,15 @@
                 <StackPanel Grid.Row="2"
                             x:Name="ExtraDetails"
                             Orientation="Horizontal"
-                            Opacity="0">
+                            Opacity="0"
+                            HorizontalAlignment="{Binding SentByMe, Converter={local:SendByMeToAligmentConverter}, ConverterParameter=True}">
                     <TextBlock Text="{Binding MessageSentTime, Converter={local:TimeToDisplayTimeConverter}}"
                                Foreground="{StaticResource ForegroundLightBrush}"
-                               HorizontalAlignment="Right"
                                FontSize="{StaticResource FontSizeSmall}"
                                FontFamily="{StaticResource LatoRegular}"
                                Margin="0 0 15 0"/>
                     <TextBlock Text="{Binding MessageReadTime, Converter={local:TimeToReadTimeConverter}}"
                                Foreground="{StaticResource WordDarkBlueBrush}"
-                               HorizontalAlignment="Right"
                                FontSize="{StaticResource FontSizeSmall}"
                                FontFamily="{StaticResource LatoRegular}" />
                 </StackPanel>
