--- a/Pages/LoginPage.xaml
+++ b/Pages/LoginPage.xaml
@@ -34,11 +34,13 @@
                                        Foreground="{StaticResource ForegroundDarkBrush}"
                                        Margin="0 0 0 20" />
                             <TextBox Tag="Email"
-                                     Text="{Binding Email}"/>
+                                     Text="{Binding Email}"
+                                     local:IsFocusedProperty.Value="True"/>
                             <PasswordBox x:Name="PasswordText"
                                          Tag="Password"
                                          Margin="0 0 0 30" />
                             <Button Content="Login"
+                                    IsDefault="True"
                                     Command="{Binding LoginCommand}"
                                     local:IsBusyProperty.Value="{Binding LoginIsRunning}"
                                     CommandParameter="{Binding ElementName=Page}"
