--- a/Pages/ChatPage.xaml
+++ b/Pages/ChatPage.xaml
@@ -55,7 +55,7 @@
                     Height="{Binding MinHeight, RelativeSource={RelativeSource AncestorType={x:Type Grid}}}"
                     Foreground="{StaticResource ForegroundDarkBrush}" />
             <TextBox Grid.Column="1"
-                     Padding="0 10"
+                     Padding="0 10 10 10"
                      Tag="Write a message..."
                      FontSize="{StaticResource FontSizeRegular}"
                      VerticalAlignment="Center"
