--- a/Pages/ChatPage.xaml
+++ b/Pages/ChatPage.xaml
@@ -16,6 +16,15 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+        <Border Grid.RowSpan="2"
+                Background="Transparent"
+                Panel.ZIndex="1"
+                Visibility="{Binding AnyPopupVisible, Converter={local:BooleanToVisibilityConverter},ConverterParameter=True}">
+            <Border.InputBindings>
+                <MouseBinding MouseAction="LeftClick"
+                              Command="{Binding PopupClickAwayCommand}" />
+            </Border.InputBindings>
+        </Border>
         <Grid Grid.Row="0"
               Height="50">
             <Grid.ColumnDefinitions>
@@ -40,11 +49,13 @@
         </Grid>
         <local:ChatMessageListControl Grid.Row="1" />
         <local:BubbleControl Grid.Row="1"
+                             Panel.ZIndex="2"
                              DataContext="{Binding AttachmentMenu}"
                              VerticalAlignment="Bottom"
                              HorizontalAlignment="Left"
                              local:AnimateSlideInFromBottomProperty.Value="{Binding ViewModel.AttachmentMenuVisible, RelativeSource={RelativeSource AncestorType={x:Type local:ChatPage}}}"/>
         <Grid Grid.Row="2"
+              Panel.ZIndex="3"
               MinHeight="50"
               MaxHeight="114"
               Background="{StaticResource ForegroundLightBrush}">
